sportsmgmt/main/default/objects/Season__c/fields/League__c.field-meta.xml
<CustomField>
    <fullName>League__c</fullName>
    <description>The league this season belongs to</description>
    <label>League</label>
    <referenceTo>League__c</referenceTo>
    <relationshipLabel>Seasons</relationshipLabel>
    <relationshipName>Seasons</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>